router links is working

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,4 +1,3 @@
-
 // Fonts
 @import url('https://fonts.googleapis.com/css?family=Nunito');
 
@@ -17,6 +16,12 @@ $fa-font-path:"../webfonts";
 
 
 .navbar-laravel {
-  background-color: #fff;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
+    background-color: #fff;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
+}
+
+.router-link-exact-active {
+    background: #0facf3;
+    background-color: #0facf3;
+    color: #ffffff !important;
 }
