--- a/public/css/app.css
+++ b/public/css/app.css
@@ -29469,3 +29469,9 @@ readers do not read off random characters that represent icons */
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
 }
 
+.router-link-exact-active {
+  background: #0facf3;
+  background-color: #0facf3;
+  color: #ffffff !important;
+}
+
